// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`components ImageButton propagates href to OptionalLink 1`] = `
<div>
  <div
    class="sc-htpNat bXXriG"
  >
    <a
      class="sc-bdVaJa kdqqWr"
      href="/some/path"
    >
      <div
        class="sc-bxivhb jeriCS"
      >
        <img
          src=""
        />
        
      </div>
    </a>
  </div>
</div>
`;

exports[`components ImageButton propagates onClick to OptionalLink 1`] = `
<div>
  <div
    class="sc-htpNat bXXriG"
  >
    <div
      class="sc-bwzfXH kZUMPF"
    >
      <div
        class="sc-bxivhb jeriCS"
      >
        <img
          src=""
        />
        
      </div>
    </div>
  </div>
</div>
`;

exports[`components ImageButton renders label and image 1`] = `
<div>
  <div
    class="sc-htpNat bXXriG"
  >
    <div
      class="sc-bwzfXH kZUMPF"
    >
      <div
        class="sc-bxivhb jeriCS"
      >
        <img
          src="imgsource.jpg"
        />
        my label
      </div>
    </div>
  </div>
</div>
`;
